[powershell-plugin] -Dnet.bytebuddy.experimental=true added to tests / jdk9 options